# wartosc-perp-research

./: .bootstrap  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
agents/: research_prompts.md
data/: README.md
docs/: architecture.md  historical-study.md  performance-metrics.md  research-baselines.md  research-evaluations.md  research-tools-and-sessions.md  scenario-assembly.md
research/: README.md
src/wartosc_perp_research/: __init__.py  __main__.py  cli.py  config.py  oracle_archive.py  quality.py
src/wartosc_perp_research/backtests/: __init__.py  assembly.py  assembly_report.py  assembly_repository.py  engine.py  metrics.py  report.py  scenario.py  study.py  study_report.py
src/wartosc_perp_research/collectors/: __init__.py  base.py  (+1 more)
tests/: installed_baseline_smoke.py  installed_research_session_smoke.py  installed_study_smoke.py  test_backtest_cli.py  test_backtest_engine.py  test_backtest_report.py  test_baseline_research_tools.py  test_baselines.py  test_candle_collector_audit.py  test_cli.py  test_collectors.py  test_config.py  test_database.py  test_funding_oracle.py  test_funding_report.py  test_funding_repository.py  test_funding_research.py  test_historical_study.py  test_hyperliquid.py  test_ingestion.py  test_oracle_archive.py  test_oracle_ingestion.py  test_package_smoke.py  test_performance_metrics.py  test_price_audit.py  test_prices.py  test_quality.py  test_raw_archive.py  test_research_evaluation_audit.py  test_research_evaluations.py  test_research_tools.py  test_scenario_assembly.py
(+30 files in other folders)
